language/move-lang/tests/move_check/expansion/invalid_unpack_assign_lhs_not_name.exp
error: 

   ┌── tests/move_check/expansion/invalid_unpack_assign_lhs_not_name.move:4:11 ───
   │
 4 │         0 { f } = 0;
   │           ^ Unexpected token: '{'
   ·
 4 │         0 { f } = 0;
   │           - Expected: ';'
   │

