language/move-lang/tests/move_check/expansion/invalid_unpack_assign_lhs_not_name.move
module M {
    foo() {
        let f = 0;
        0 { f } = 0;
    }
}
